--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   fcoder_assitant:
     image: fcoder_assitant
     build: .
-    restart: always
+    restart: unless-stopped
     ports:
       - "5000:5000"
 
