Works fine, await further errors

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,5 +1,5 @@
 {
     "Prefix": "!",
-    "Token": "YOUR_DISCORD_BOT_TOKEN"
+    "Token": "MTE4NDc0ODYwMjA4NjY1NDAzMw.Gr2vJM.TnKU0u0p9eDxDnrnBYFjlwTEhMKXXcl0vTRDgQ"
 }
   
