--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
             username: ${{ secrets.FTP_USERNAME }}
             server: ${{ secrets.FTP_SERVER }}
             port: ${{ secrets.FTP_PORT }}
-            local_path: './static/*'
-            remote_path: '/var/www/app'
+            local_path: './app/*'
+            remote_path: '/home/'
             sftp_only: true
             password: ${{ secrets.FTP_PASSWORD }}
