--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,6 @@ jobs:
             server: ${{ secrets.FTP_SERVER }}
             port: ${{ secrets.FTP_PORT }}
             local_path: './app/*'
-            remote_path: '/home/'
+            remote_path: '/home/container/'
             sftp_only: true
             password: ${{ secrets.FTP_PASSWORD }}
