--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,14 @@ jobs:
     steps:
         - name: Checkout
           uses: actions/checkout@v3
-        - name: Deploy file
-          uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+
+        - name: deploy
+          uses: pressidium/lftp-mirror-action@v1
           with:
-            username: ${{ secrets.FTP_USERNAME }}
-            server: ${{ secrets.FTP_SERVER }}
+            host: ${{ secrets.FTP_SERVER }}
             port: ${{ secrets.FTP_PORT }}
-            local_path: './app/*'
-            remote_path: '/home/container/'
-            sftp_only: true
-            password: ${{ secrets.FTP_PASSWORD }}
+            user: ${{ secrets.FTP_USERNAME }}
+            pass: ${{ secrets.FTP_PASSWORD }}
+            localDir: './app/*'
+            remoteDir: '/home/container/'
+            reverse: true
