--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,24 +7,37 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy_job:
+  build_and_deploy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [ '1.21.x' ]
     environment: 
       name: sftp-deploy
-      url: https://github.co
-    name: deploy
+      url: https://github.com
+    defaults:
+      run:
+        working-directory: ./app
+
     steps:
-        - name: Checkout
-          uses: actions/checkout@v3
-        - name: Deploy file
-          uses: wlixcc/SFTP-Deploy-Action@v1.2.4
-          with:
-            username: ${{ secrets.FTP_USERNAME }}
-            server: ${{ secrets.FTP_SERVER }}
-            port: ${{ secrets.FTP_PORT }}
-            local_path: './app/*'
-            remote_path: '.'
-            sftp_only: true
-            password: ${{ secrets.FTP_PASSWORD }}
-          
-          
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ matrix.go-version }}
+
+      - name: Build Go application
+        run: go build -o CHANGE_ME main.go
+
+      - name: Deploy to SFTP
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+        with:
+          username: ${{ secrets.FTP_USERNAME }}
+          server: ${{ secrets.FTP_SERVER }}
+          port: ${{ secrets.FTP_PORT }}
+          local_path: '.'
+          remote_path: '.'
+          sftp_only: true
+          password: ${{ secrets.FTP_PASSWORD }}
