--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.21.x' ]
-    environment: 
-      name: sftp-deploy
-      url: https://github.com
+        go-version: ['1.21.x']
     defaults:
       run:
         working-directory: ./app
@@ -30,6 +27,17 @@ jobs:
 
       - name: Build Go application
         run: go build -o CHANGE_ME main.go
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment: 
+      name: sftp-deploy
+      url: https://github.com
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Deploy to SFTP
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
