--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           server: ${{ secrets.FTP_SERVER }}
           port: ${{ secrets.FTP_PORT }}
-          local_path: './app'
+          local_path: './app/*'
           remote_path: '.'
           sftp_only: true
           password: ${{ secrets.FTP_PASSWORD }}
