--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.21.x']
+        go-version: [ '1.21.x' ]
+    environment: 
+      name: sftp-deploy
+      url: https://github.com
     defaults:
       run:
         working-directory: ./app
@@ -26,20 +29,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
 
       - name: Build Go application
-        id: build
         run: go build -o CHANGE_ME main.go
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    if: success()
-    environment: 
-      name: sftp-deploy
-      url: https://github.com
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
 
       - name: Deploy to SFTP
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
@@ -47,7 +37,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           server: ${{ secrets.FTP_SERVER }}
           port: ${{ secrets.FTP_PORT }}
-          local_path: './app/*'
+          local_path: '.'
           remote_path: '.'
           sftp_only: true
           password: ${{ secrets.FTP_PASSWORD }}
