--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,38 @@
 name: Deploy to SFTP
-
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.21.x' ]
-    environment: 
-      name: sftp-deploy
-      url: https://github.com
+        go-version: ['1.21.x']
     defaults:
       run:
         working-directory: ./app
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
-
       - name: Build Go application
+        id: build
         run: go build -o CHANGE_ME main.go
-
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: success()
+    environment: 
+      name: sftp-deploy
+      url: https://github.com
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Deploy to SFTP
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with:
